# tiresias-fw

./: CMakeLists.txt  LICENSE  README.md  example.c  nrf5340_audio_dk_nrf5340_cpuapp.overlay  prj.conf
docs/: adau1787.md  hardware_connections_adau1701.md  resources.md
src/: main.c
src/SigmaStudioFiles/: CMakeLists.txt  SigmaStudioFW.h  adau_1701_IC_1.h  adau_1701_IC_1_PARAM.h  adau_1701_IC_1_REG.h  adau_1701_IC_2_PARAM.h  adau_1701_IC_2_REG.h  adau_1787.dspproj  adau_1787.hex  adau_1787.params  adau_1787.xml  adau_1787_IC_1_FAST.h  adau_1787_IC_1_FAST_PARAM.h  adau_1787_IC_1_FAST_REG.h  adau_1787_IC_1_SIGMA.h  adau_1787_IC_1_SIGMA_PARAM.h  adau_1787_IC_1_SIGMA_REG.h  adau_1787_IC_2.h  adau_1787_IC_2_PARAM.h  adau_1787_IC_2_REG.h  adau_1787_NetList.xml  defines.h
src/SigmaStudioFiles-1701/: CMakeLists.txt  adau_1701.dspproj  adau_1701.hex  adau_1701.params  adau_1701.xml  adau_1701_IC_2.h  adau_1701_NetList.xml
src/SigmaStudioFiles/IC 1-Sigma_adau_1787/: compiler_output.txt
src/SigmaStudioFiles/IC 1_adau_1701/: as_code.enc  net_list.cir2
src/SigmaStudioFiles/IC 1_adau_1701/net_list_out2/: compiler_output.txt
src/SigmaStudioFiles/adau_1787_IC 2/: E2Prom.Hex
src/drivers/: CMakeLists.txt  Kconfig  SigmaStudioFW.h  adau1701.c  adau1701.dts  adau1701.h  adau1701.md  adau1787.c  adau1787.h  adau1787.md  adi,adau1701.txt  cs47l63_comm.c  cs47l63_reg_conf.h
src/modules/: CMakeLists.txt  Kconfig  audio_codec.c  audio_codec.h  audio_i2s.c  audio_i2s.h  audio_sync_timer.c
